// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Text Area Input Custom margin of 50px 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.08);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c1 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 > .input > input,
.select__search .c1 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c1 > .input > textarea {
  padding: 16px;
}

.c1 > .input > input,
.c1 > .input > textarea,
.select__search .c1 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c1 > .input > input::-webkit-input-placeholder,
.c1 > .input > textarea::-webkit-input-placeholder,
.select__search .c1 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input::-moz-placeholder,
.c1 > .input > textarea::-moz-placeholder,
.select__search .c1 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input:-ms-input-placeholder,
.c1 > .input > textarea:-ms-input-placeholder,
.select__search .c1 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input::placeholder,
.c1 > .input > textarea::placeholder,
.select__search .c1 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input[type="search"],
.c1 > .input > textarea[type="search"],
.select__search .c1 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c1 > .input > input[type="search"]::-webkit-search-cancel-button,
.c1 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c1 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c1 > .input > input[type="search"]::-ms-clear,
.c1 > .input > textarea[type="search"]::-ms-clear,
.select__search .c1 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c1 > .input > input[role="combobox"],
.c1 > .input > textarea[role="combobox"],
.select__search .c1 > .input input[role="combobox"] {
  cursor: pointer;
}

.c1 > .input > .icon {
  color: rgba(0,0,0,0.08);
  font-size: 20px;
  height: 24px;
}

.c1 > .input > .icon.left {
  margin-left: 12px;
}

.c1 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c1 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c1 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c1 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1 .input.dropdown {
  cursor: pointer;
}

.c1 input[type="number"] {
  -moz-appearance: textfield;
}

.c1 input[type="number"]::-webkit-inner-spin-button,
.c1 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1 .prefix,
.c1 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .label {
  margin-bottom: 8px;
}

.c0 {
  font-family: Lato,sans-serif;
  margin: 50px;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="text"
  >
    <div
      className="input"
    >
      <textarea
        className="wrapped"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        rows="3"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Area Input Default 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.08);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c1 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 > .input > input,
.select__search .c1 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c1 > .input > textarea {
  padding: 16px;
}

.c1 > .input > input,
.c1 > .input > textarea,
.select__search .c1 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c1 > .input > input::-webkit-input-placeholder,
.c1 > .input > textarea::-webkit-input-placeholder,
.select__search .c1 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input::-moz-placeholder,
.c1 > .input > textarea::-moz-placeholder,
.select__search .c1 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input:-ms-input-placeholder,
.c1 > .input > textarea:-ms-input-placeholder,
.select__search .c1 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input::placeholder,
.c1 > .input > textarea::placeholder,
.select__search .c1 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input[type="search"],
.c1 > .input > textarea[type="search"],
.select__search .c1 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c1 > .input > input[type="search"]::-webkit-search-cancel-button,
.c1 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c1 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c1 > .input > input[type="search"]::-ms-clear,
.c1 > .input > textarea[type="search"]::-ms-clear,
.select__search .c1 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c1 > .input > input[role="combobox"],
.c1 > .input > textarea[role="combobox"],
.select__search .c1 > .input input[role="combobox"] {
  cursor: pointer;
}

.c1 > .input > .icon {
  color: rgba(0,0,0,0.08);
  font-size: 20px;
  height: 24px;
}

.c1 > .input > .icon.left {
  margin-left: 12px;
}

.c1 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c1 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c1 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c1 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1 .input.dropdown {
  cursor: pointer;
}

.c1 input[type="number"] {
  -moz-appearance: textfield;
}

.c1 input[type="number"]::-webkit-inner-spin-button,
.c1 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1 .prefix,
.c1 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .label {
  margin-bottom: 8px;
}

.c0 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="text"
  >
    <div
      className="input"
    >
      <textarea
        className="wrapped"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        rows="3"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Area Input Disabled 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  color: rgba(0,0,0,0.32);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.08);
  background-color: rgba(0,0,0,0.16);
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c1 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 > .input > input,
.select__search .c1 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c1 > .input > textarea {
  padding: 16px;
}

.c1 > .input > input,
.c1 > .input > textarea,
.select__search .c1 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: rgba(0,0,0,0.32);
  background: none;
}

.c1 > .input > input::-webkit-input-placeholder,
.c1 > .input > textarea::-webkit-input-placeholder,
.select__search .c1 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input::-moz-placeholder,
.c1 > .input > textarea::-moz-placeholder,
.select__search .c1 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input:-ms-input-placeholder,
.c1 > .input > textarea:-ms-input-placeholder,
.select__search .c1 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input::placeholder,
.c1 > .input > textarea::placeholder,
.select__search .c1 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input[type="search"],
.c1 > .input > textarea[type="search"],
.select__search .c1 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c1 > .input > input[type="search"]::-webkit-search-cancel-button,
.c1 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c1 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c1 > .input > input[type="search"]::-ms-clear,
.c1 > .input > textarea[type="search"]::-ms-clear,
.select__search .c1 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c1 > .input > input[role="combobox"],
.c1 > .input > textarea[role="combobox"],
.select__search .c1 > .input input[role="combobox"] {
  cursor: default;
}

.c1 > .input > .icon {
  color: rgba(0,0,0,0.08);
  font-size: 20px;
  height: 24px;
}

.c1 > .input > .icon.left {
  margin-left: 12px;
}

.c1 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c1 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c1 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c1 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1 .input.dropdown {
  cursor: default;
}

.c1 input[type="number"] {
  -moz-appearance: textfield;
}

.c1 input[type="number"]::-webkit-inner-spin-button,
.c1 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1 .prefix,
.c1 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: rgba(0,0,0,0.16);
  color: rgba(0,0,0,0.32);
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .label {
  margin-bottom: 8px;
}

.c0 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={true}
    onClick={[Function]}
    type="text"
  >
    <div
      className="input"
    >
      <textarea
        className="wrapped"
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="input value here"
        rows="3"
        type="text"
        value=""
      />
    </div>
    <label
      className="c2 label"
      disabled={true}
    >
      Field Label
    </label>
  </div>
</div>
`;

exports[`Storyshots Text Area Input Focused 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: #3498db;
  background-color: #ffffff;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c1 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 > .input > input,
.select__search .c1 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c1 > .input > textarea {
  padding: 16px;
}

.c1 > .input > input,
.c1 > .input > textarea,
.select__search .c1 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c1 > .input > input::-webkit-input-placeholder,
.c1 > .input > textarea::-webkit-input-placeholder,
.select__search .c1 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.16);
}

.c1 > .input > input::-moz-placeholder,
.c1 > .input > textarea::-moz-placeholder,
.select__search .c1 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.16);
}

.c1 > .input > input:-ms-input-placeholder,
.c1 > .input > textarea:-ms-input-placeholder,
.select__search .c1 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.16);
}

.c1 > .input > input::placeholder,
.c1 > .input > textarea::placeholder,
.select__search .c1 > .input input::placeholder {
  color: rgba(0,0,0,0.16);
}

.c1 > .input > input[type="search"],
.c1 > .input > textarea[type="search"],
.select__search .c1 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c1 > .input > input[type="search"]::-webkit-search-cancel-button,
.c1 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c1 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c1 > .input > input[type="search"]::-ms-clear,
.c1 > .input > textarea[type="search"]::-ms-clear,
.select__search .c1 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c1 > .input > input[role="combobox"],
.c1 > .input > textarea[role="combobox"],
.select__search .c1 > .input input[role="combobox"] {
  cursor: pointer;
}

.c1 > .input > .icon {
  color: #3498db;
  font-size: 20px;
  height: 24px;
}

.c1 > .input > .icon.left {
  margin-left: 12px;
}

.c1 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c1 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c1 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c1 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1 .input.dropdown {
  cursor: pointer;
}

.c1 input[type="number"] {
  -moz-appearance: textfield;
}

.c1 input[type="number"]::-webkit-inner-spin-button,
.c1 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1 .prefix,
.c1 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #3498db;
  color: white;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .label {
  margin-bottom: 8px;
}

.c0 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="text"
  >
    <div
      className="input"
    >
      <textarea
        className="wrapped"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        rows="3"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Area Input With label 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  color: #2f313a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.08);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c1 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 > .input > input,
.select__search .c1 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c1 > .input > textarea {
  padding: 16px;
}

.c1 > .input > input,
.c1 > .input > textarea,
.select__search .c1 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c1 > .input > input::-webkit-input-placeholder,
.c1 > .input > textarea::-webkit-input-placeholder,
.select__search .c1 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input::-moz-placeholder,
.c1 > .input > textarea::-moz-placeholder,
.select__search .c1 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input:-ms-input-placeholder,
.c1 > .input > textarea:-ms-input-placeholder,
.select__search .c1 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input::placeholder,
.c1 > .input > textarea::placeholder,
.select__search .c1 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input[type="search"],
.c1 > .input > textarea[type="search"],
.select__search .c1 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c1 > .input > input[type="search"]::-webkit-search-cancel-button,
.c1 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c1 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c1 > .input > input[type="search"]::-ms-clear,
.c1 > .input > textarea[type="search"]::-ms-clear,
.select__search .c1 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c1 > .input > input[role="combobox"],
.c1 > .input > textarea[role="combobox"],
.select__search .c1 > .input input[role="combobox"] {
  cursor: pointer;
}

.c1 > .input > .icon {
  color: rgba(0,0,0,0.08);
  font-size: 20px;
  height: 24px;
}

.c1 > .input > .icon.left {
  margin-left: 12px;
}

.c1 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c1 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c1 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c1 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1 .input.dropdown {
  cursor: pointer;
}

.c1 input[type="number"] {
  -moz-appearance: textfield;
}

.c1 input[type="number"]::-webkit-inner-spin-button,
.c1 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1 .prefix,
.c1 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .label {
  margin-bottom: 8px;
}

.c0 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="text"
  >
    <div
      className="input"
    >
      <textarea
        className="wrapped"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        rows="3"
        type="text"
        value=""
      />
    </div>
    <label
      className="c2 label"
      disabled={false}
    >
      Field Label
    </label>
  </div>
</div>
`;

exports[`Storyshots Text Area Input With placeholder 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  color: #2f313a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.08);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c1 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 > .input > input,
.select__search .c1 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c1 > .input > textarea {
  padding: 16px;
}

.c1 > .input > input,
.c1 > .input > textarea,
.select__search .c1 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c1 > .input > input::-webkit-input-placeholder,
.c1 > .input > textarea::-webkit-input-placeholder,
.select__search .c1 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input::-moz-placeholder,
.c1 > .input > textarea::-moz-placeholder,
.select__search .c1 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input:-ms-input-placeholder,
.c1 > .input > textarea:-ms-input-placeholder,
.select__search .c1 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input::placeholder,
.c1 > .input > textarea::placeholder,
.select__search .c1 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input[type="search"],
.c1 > .input > textarea[type="search"],
.select__search .c1 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c1 > .input > input[type="search"]::-webkit-search-cancel-button,
.c1 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c1 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c1 > .input > input[type="search"]::-ms-clear,
.c1 > .input > textarea[type="search"]::-ms-clear,
.select__search .c1 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c1 > .input > input[role="combobox"],
.c1 > .input > textarea[role="combobox"],
.select__search .c1 > .input input[role="combobox"] {
  cursor: pointer;
}

.c1 > .input > .icon {
  color: rgba(0,0,0,0.08);
  font-size: 20px;
  height: 24px;
}

.c1 > .input > .icon.left {
  margin-left: 12px;
}

.c1 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c1 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c1 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c1 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1 .input.dropdown {
  cursor: pointer;
}

.c1 input[type="number"] {
  -moz-appearance: textfield;
}

.c1 input[type="number"]::-webkit-inner-spin-button,
.c1 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1 .prefix,
.c1 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .label {
  margin-bottom: 8px;
}

.c0 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="text"
  >
    <div
      className="input"
    >
      <textarea
        className="wrapped"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="input value here"
        rows="3"
        type="text"
        value=""
      />
    </div>
    <label
      className="c2 label"
      disabled={false}
    >
      Field Label
    </label>
  </div>
</div>
`;

exports[`Storyshots Text Area Input With validation messages 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  color: #dd3311;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: #dd3311;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c1 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 > .input > input,
.select__search .c1 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c1 > .input > textarea {
  padding: 16px;
}

.c1 > .input > input,
.c1 > .input > textarea,
.select__search .c1 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c1 > .input > input::-webkit-input-placeholder,
.c1 > .input > textarea::-webkit-input-placeholder,
.select__search .c1 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input::-moz-placeholder,
.c1 > .input > textarea::-moz-placeholder,
.select__search .c1 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input:-ms-input-placeholder,
.c1 > .input > textarea:-ms-input-placeholder,
.select__search .c1 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input::placeholder,
.c1 > .input > textarea::placeholder,
.select__search .c1 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input[type="search"],
.c1 > .input > textarea[type="search"],
.select__search .c1 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c1 > .input > input[type="search"]::-webkit-search-cancel-button,
.c1 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c1 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c1 > .input > input[type="search"]::-ms-clear,
.c1 > .input > textarea[type="search"]::-ms-clear,
.select__search .c1 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c1 > .input > input[role="combobox"],
.c1 > .input > textarea[role="combobox"],
.select__search .c1 > .input input[role="combobox"] {
  cursor: pointer;
}

.c1 > .input > .icon {
  color: #dd3311;
  font-size: 20px;
  height: 24px;
}

.c1 > .input > .icon.left {
  margin-left: 12px;
}

.c1 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c1 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c1 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c1 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1 .input.dropdown {
  cursor: pointer;
}

.c1 input[type="number"] {
  -moz-appearance: textfield;
}

.c1 input[type="number"]::-webkit-inner-spin-button,
.c1 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1 .prefix,
.c1 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #dd3311;
  color: white;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .label {
  margin-bottom: 8px;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #dd3311;
  text-align: left;
  margin-top: 8px;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c0 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="text"
  >
    <div
      className="input"
    >
      <textarea
        className="wrapped"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Type in the formfield content…"
        rows="3"
        type="text"
        value=""
      />
    </div>
    <label
      className="c2 label"
      disabled={false}
    >
      Field Label
    </label>
    <div
      className="Text-pfq5dp-0 c3 error-message-text"
      size={14}
      type="#dd3311"
    >
      You need to fill this field.
    </div>
  </div>
</div>
`;

exports[`Storyshots Text Area Input With value 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  font-weight: 600;
  color: #2f313a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.08);
  background-color: #ffffff;
  box-shadow: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c1 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 > .input > input,
.select__search .c1 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c1 > .input > textarea {
  padding: 16px;
}

.c1 > .input > input,
.c1 > .input > textarea,
.select__search .c1 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c1 > .input > input::-webkit-input-placeholder,
.c1 > .input > textarea::-webkit-input-placeholder,
.select__search .c1 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input::-moz-placeholder,
.c1 > .input > textarea::-moz-placeholder,
.select__search .c1 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input:-ms-input-placeholder,
.c1 > .input > textarea:-ms-input-placeholder,
.select__search .c1 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input::placeholder,
.c1 > .input > textarea::placeholder,
.select__search .c1 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c1 > .input > input[type="search"],
.c1 > .input > textarea[type="search"],
.select__search .c1 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c1 > .input > input[type="search"]::-webkit-search-cancel-button,
.c1 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c1 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c1 > .input > input[type="search"]::-ms-clear,
.c1 > .input > textarea[type="search"]::-ms-clear,
.select__search .c1 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c1 > .input > input[role="combobox"],
.c1 > .input > textarea[role="combobox"],
.select__search .c1 > .input input[role="combobox"] {
  cursor: pointer;
}

.c1 > .input > .icon {
  color: rgba(0,0,0,0.08);
  font-size: 20px;
  height: 24px;
}

.c1 > .input > .icon.left {
  margin-left: 12px;
}

.c1 > .input > .icon.dropdown {
  margin: 0 8px;
}

.c1 > .input > .clear {
  color: rgba(0,0,0,0.16);
  font-size: 20px;
  height: 24px;
  margin-right: 16px;
}

.c1 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c1 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1 .input.dropdown {
  cursor: pointer;
}

.c1 input[type="number"] {
  -moz-appearance: textfield;
}

.c1 input[type="number"]::-webkit-inner-spin-button,
.c1 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c1 .prefix,
.c1 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 .label {
  margin-bottom: 8px;
}

.c0 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="text"
  >
    <div
      className="input"
    >
      <textarea
        className="wrapped"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="input value here"
        rows="3"
        type="text"
        value="a value"
      />
    </div>
    <label
      className="c2 label"
      disabled={false}
    >
      Field Label
    </label>
  </div>
</div>
`;
